--- a/style.css
+++ b/style.css
@@ -28,6 +28,20 @@ width:100%;
 height:80px ;
 background-color: var(--background-nav);
 }
+button {
+    background-color: #007bff;
+    color: rgb(255, 255, 255);
+    border: none;
+    padding: 8px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+button:hover {
+    background-color: #0056b3;
+    color: #33ff00;
+}
 
 nav ul{
   padding-top: 0.7%;
