--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-cadastro.css">
-    <link rel="stylesheet" href="index1.js">
+    <link rel="stylesheet" href="/static/css/style-cadastro.css">
+    
     <title>Crie sua conta | Borba Tech</title>
 </head>
 <body>
@@ -33,6 +33,15 @@
     </nav>
 
     <!-- ================= FORMULÁRIO ================= -->
+
+<div class="background">
+  <div class="mountains"></div>
+  <div class="cloud cloud1"></div>
+  <div class="cloud cloud2"></div>
+</div>
+
+
+
     <main>
         <div class="container-cad">
             <h1>Cadastro</h1>
@@ -50,6 +59,6 @@
         </div>
     </main>
 
-    <script src="index1.js"></script>
+    <script src="/static/Js/index1.js"></script>
 </body>
 </html>
