--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-home.css">
+    <link rel="stylesheet" href="/static/css/style-home.css">
     <meta name="description" content="Borba Tech - Soluções inteligentes em informática. Manutenção, montagem e otimização de computadores com qualidade e confiança.">
     <title>Borba Tech - Sobre Nós</title>
 </head>
@@ -46,7 +46,11 @@
             </p>
         </div>
     </header>
-
+<div class="background">
+  <div class="mountains"></div>
+  <div class="cloud cloud1"></div>
+  <div class="cloud cloud2"></div>
+</div>
     <!-- ================= SERVIÇOS ================= -->
     <main>
         <h2>Nossos Serviços</h2>
