--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stle-sobre.css">
+    <link rel="stylesheet" href="/static/css/style-sobre.css">
     <title>Quem Nós Somos | Borba Tech</title>
 </head>
 <body>
@@ -56,7 +56,7 @@
       </p>
     </div>
     <div class="foto">
-      <img src="img/minha foto sobre min.png" alt="Foto de [Seu Nome]">
+      <img src="/static/img/minha foto sobre min.png" alt="Foto de Max Borba">
     </div>
   </div>
 </section>
@@ -64,5 +64,11 @@
 
 
     </header>
+<div class="background">
+  <div class="mountains"></div>
+  <div class="cloud cloud1"></div>
+  <div class="cloud cloud2"></div>
+</div>
+    
 </body>
 </html>
