--- a/templates/index.html
+++ b/templates/index.html
@@ -24,11 +24,11 @@
 </div>
 
     <ul>
-  <li><a href="index.html" class="menu-btn">Início</a></li>
+  <li><a href="/templates/index.html" class="menu-btn">Início</a></li>
   <li><a href="produtos.html" class="menu-btn">Produtos</a></li>
-  <li><a href="sobre.html" class="menu-btn">Sobre nós</a></li>
+  <li><a href="/templates/sobre.html" class="menu-btn">Sobre nós</a></li>
   <li><a href="login.html" class="menu-btn">Entrar</a></li>
-  <li><a href="cadastro.html" class="menu-btn">Cadastrar</a></li>
+  <li><a href="/templates/cadastro.html" class="menu-btn">Cadastrar</a></li>
     </ul>
 
     </nav>
