--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/style-cadastro.css">
+    <link rel="stylesheet" href="static/css/style-cadastro.css">
     
     <title>Crie sua conta | Borba Tech</title>
 </head>
@@ -24,11 +24,11 @@
         </div>
 
         <ul>
-            <li><a href="/templates/index.html" class="menu-btn">Início</a></li>
+            <li><a href="templates/index.html" class="menu-btn">Início</a></li>
             <li><a href="produtos.html" class="menu-btn">Produtos</a></li>
-            <li><a href="/templates/sobre.html" class="menu-btn">Sobre nós</a></li>
+            <li><a href="templates/sobre.html" class="menu-btn">Sobre nós</a></li>
             <li><a href="login.html" class="menu-btn">Entrar</a></li>
-            <li><a href="/templates/cadastro.html" class="menu-btn">Cadastrar</a></li>
+            <li><a href="templates/cadastro.html" class="menu-btn">Cadastrar</a></li>
         </ul>
     </nav>
 
@@ -59,6 +59,11 @@
         </div>
     </main>
 
-    <script src="/static/Js/index1.js"></script>
+    <script src="static/Js/index1.js"></script>
+
+
+    <footer>
+            <p>&copy; 2025 Borba Tech - Todos os direitos reservados.</p>
+        </footer>
 </body>
 </html>
