--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/style-sobre.css">
+    <link rel="stylesheet" href="static/css/style-sobre.css">
     <title>Quem Nós Somos | Borba Tech</title>
 </head>
 <body>
@@ -21,11 +21,11 @@
 </div>
 
     <ul>
-  <li><a href="/templates/index.html" class="menu-btn">Início</a></li>
+  <li><a href="templates/index.html" class="menu-btn">Início</a></li>
   <li><a href="produtos.html" class="menu-btn">Produtos</a></li>
-  <li><a href="/templates/sobre.html" class="menu-btn">Sobre nós</a></li>
+  <li><a href="templates/sobre.html" class="menu-btn">Sobre nós</a></li>
   <li><a href="login.html" class="menu-btn">Entrar</a></li>
-  <li><a href="/templates/cadastro.html" class="menu-btn">Cadastrar</a></li>
+  <li><a href="templates/cadastro.html" class="menu-btn">Cadastrar</a></li>
     </ul>
 
     </nav>
@@ -56,7 +56,7 @@
       </p>
     </div>
     <div class="foto">
-      <img src="/static/img/minha foto sobre min.png" alt="Foto de Max Borba">
+      <img src="static/img/minha foto sobre min.png" alt="Foto de Max Borba">
     </div>
   </div>
 </section>
@@ -70,5 +70,9 @@
   <div class="cloud cloud2"></div>
 </div>
     
+
+<footer>
+            <p>&copy; 2025 Borba Tech - Todos os direitos reservados.</p>
+        </footer>
 </body>
 </html>
