--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/style-sobre.css">
+    <link rel="stylesheet" href="/static/css/style-sobre.css">
     <title>Quem Nós Somos | Borba Tech</title>
 </head>
 <body>
@@ -21,16 +21,23 @@
 </div>
 
     <ul>
-  <li><a href="templates/index.html" class="menu-btn">Início</a></li>
+  <li><a href="\templates\index.html" class="menu-btn">Início</a></li>
   <li><a href="produtos.html" class="menu-btn">Produtos</a></li>
-  <li><a href="templates/sobre.html" class="menu-btn">Sobre nós</a></li>
+  <li><a href="\templates\sobre.html" class="menu-btn">Sobre nós</a></li>
   <li><a href="login.html" class="menu-btn">Entrar</a></li>
-  <li><a href="templates/cadastro.html" class="menu-btn">Cadastrar</a></li>
+  <li><a href="\templates\cadastro.html" class="menu-btn">Cadastrar</a></li>
     </ul>
 
     </nav>
+<div class="background">
+  <div class="mountains"></div>
+  <div class="cloud cloud1"></div>
+  <div class="cloud cloud2"></div>
+</div>
 
-    <header>
+
+    
+    <main>
 <section class="sobre-m">
   <div class="quadrado">
     <div class="texto">
@@ -56,21 +63,14 @@
       </p>
     </div>
     <div class="foto">
-      <img src="static/img/minha foto sobre min.png" alt="Foto de Max Borba">
+      <img src="/static/img/minha foto sobre min.png" alt="Foto de Max Borba">
     </div>
   </div>
 </section>
 
 
 
-    </header>
-<div class="background">
-  <div class="mountains"></div>
-  <div class="cloud cloud1"></div>
-  <div class="cloud cloud2"></div>
-</div>
-    
-
+    </main>
 <footer>
             <p>&copy; 2025 Borba Tech - Todos os direitos reservados.</p>
         </footer>
