--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/style-home.css">
+    <link rel="stylesheet" href="/static/css/style-home.css">
     <meta name="description" content="Borba Tech - Soluções inteligentes em informática. Manutenção, montagem e otimização de computadores com qualidade e confiança.">
     <title>Borba Tech - Sobre Nós</title>
 </head>
@@ -24,11 +24,11 @@
 </div>
 
     <ul>
-  <li><a href="templates/index.html" class="menu-btn">Início</a></li>
+  <li><a href="\templates\index.html" class="menu-btn">Início</a></li>
   <li><a href="produtos.html" class="menu-btn">Produtos</a></li>
-  <li><a href="templates/sobre.html" class="menu-btn">Sobre nós</a></li>
+  <li><a href="\templates\sobre.html" class="menu-btn">Sobre nós</a></li>
   <li><a href="login.html" class="menu-btn">Entrar</a></li>
-  <li><a href="templates/cadastro.html" class="menu-btn">Cadastrar</a></li>
+  <li><a href="\templates\cadastro.html" class="menu-btn">Cadastrar</a></li>
     </ul>
 
     </nav>
@@ -101,8 +101,10 @@
 
         
     </main>
-<footer>
+
+    <footer>
             <p>&copy; 2025 Borba Tech - Todos os direitos reservados.</p>
         </footer>
+
 </body>
 </html>
