--- a/static/css/style-cadastro.css
+++ b/static/css/style-cadastro.css
@@ -20,6 +20,7 @@
 
 html, body {
   height: 100%;
+  margin: 0;
   font-family: var(--fonte-p);
 }
 
@@ -27,6 +28,7 @@ html, body {
 body {
   background: linear-gradient(120deg, #505675, #7f8caa);
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   position: relative;
@@ -327,3 +329,7 @@ main {
   0% { transform: translateX(0); }
   100% { transform: translateX(120vw); }
 }
+footer {
+  text-align: center;
+  padding: 20px;
+  color: #000;
