--- a/static/css/style-home.css
+++ b/static/css/style-home.css
@@ -158,7 +158,7 @@ main h2 {
 footer {
   text-align: center;
   padding: 20px;
-  color: #fff;
+  color: #000000;
 }
 
 /* --- RESPONSIVIDADE --- */
