--- a/static/css/pagamentos.css
+++ b/static/css/pagamentos.css
@@ -112,3 +112,12 @@ button:hover {
     padding: 10px;
   }
 }
+#bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(135deg, #1a1a2e, #16213e, #0f3460);
+}
