--- a/static/css/pagamentos.css
+++ b/static/css/pagamentos.css
@@ -36,7 +36,7 @@ body {
   max-width: 360px;
   height: 220px;
   border-radius: 14px;
-  background-image: url("/static/img/bg.png");
+   background-image: url("static/img/bg.png");
   background-size: cover;
   padding: 25px;
   box-shadow: 0 5px 10px rgba(0,0,0,0.1);
@@ -93,13 +93,14 @@ h5.name {
   width: 100%;
   height: 100%;
   border-radius: 28px;
-  background: linear-gradient(135deg, #0f3460, #533483);
+  background-image: url("static/img/bg.png");
+  
   backface-visibility: hidden;
   transform: rotateY(180deg);
   padding: 25px;
 }
 .linha-magnetica {
-  background: black;
+  background: rgb(27, 27, 27);
   height: 50px;
   margin: 20px 0;
 }
